<resources>
    <string name="app_name">Notes</string>
    <string name="new_note">+</string>
    <string name="main_header">Quick Notes</string>
    <string name="note_header">Note name....</string>
    <string name="note_content">Write here....</string>
    <string name="date_in_bar">Oct 23 2022</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="searchField">Search...</string>

</resources>