<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_card"
    android:backgroundTint="@color/card_color"
    app:cardCornerRadius="16dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--Place holder for users note name-->
        <TextView
            android:id="@+id/text_view_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:hint="@string/note_header"
            android:padding="5dp"
            android:textColorHint="@color/text_color"
            android:textSize="@dimen/medium_font"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Place holder for users note content-->
        <TextView
            android:id="@+id/text_view_content"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/note_content"
            android:padding="5dp"
            android:textColorHint="@color/text_color"
            android:textSize="@dimen/small_font"
            app:layout_constraintStart_toStartOf="@+id/text_view_header"
            app:layout_constraintTop_toBottomOf="@+id/text_view_header" />

        <!--Delete bin button in custom list bar-->
        <ImageView
            android:id="@+id/deleteBinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:padding="@dimen/padding_card"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.129"
            app:srcCompat="@drawable/ic_action_delete_bin_pinkwhite" />

        <!--The time stamp in custom list bar-->
        <TextView
            android:id="@+id/timeDateView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/text_color"
            android:textSize="@dimen/small_font"
            app:layout_constraintEnd_toEndOf="@+id/deleteBinButton"
            app:layout_constraintTop_toBottomOf="@+id/deleteBinButton"
            tools:text="@string/date_in_bar" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>